# hypatia

./: .gitignore  README.md  com.github.HypatiaProject.hypatia.json  com.github.HypatiaProject.hypatia.json~  meson.build
data/: com.github.HypatiaProject.hypatia.appdata.xml.in  com.github.HypatiaProject.hypatia.desktop.in  com.github.HypatiaProject.hypatia.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  DictionaryBox.vala  InstantAnswersBox.vala  Main.vala  SearchUtility.vala  WelcomeBox.vala  WikipediaBox.vala  Window.vala  hypatia.xml  meson.build
